# Lille_trip_planner

./: .env  .gitignore  API.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: daily_weather_data.csv  historical_sites_lille.csv  hotels_lille.csv  restaurants_lille.csv  train_trips.csv  weather.csv
reports/: Rapport_SAE3-01_MonVoyage_Antonin.docx  sae_vcod.xlsx
scripts/: fetch_hotels.py  fetch_museums.py  fetch_restaurants.py  fetch_routes.py  fetch_trains.py  fetch_weather.py  fetch_wikipedia.py  utils.py
src/: css_custom.py  planner.py  services.py  translations.py
