[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-lille-planner"
version = "0.1.0"
description = "A comprehensive interactive application to plan your trip to Lille, France."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Phuc Anh", email = "dpa280706@gmail.com"}
]
dependencies = [
    "streamlit>=1.39.0",
    "folium>=0.17.0",
    "streamlit-folium>=0.22.0",
    "watchdog>=5.0.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "jupyter>=1.1.0",
    "python-dotenv>=1.0.0",
    "openmeteo-requests>=1.3.0",
    "requests-cache>=1.2.0",
    "retry-requests>=6.0",
    "wikipedia>=1.4.0",
    "pygwalker>=0.4.9",
]

[tool.uv]
package = false
