[project]
name = "trip-lille-planner"
version = "0.1.0"
description = "Lille Trip Planner"
dependencies = [
    "streamlit>=1.39.0",
    "folium>=0.17.0",
    "streamlit-folium>=0.22.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "openmeteo-requests>=1.3.0",
    "requests-cache>=1.2.0",
    "retry-requests>=6.0",
    "wikipedia>=1.4.0",
    "pygwalker>=0.4.9",
]

[tool.uv]
package = false
